modules/dropdownSwitcher/styles.less
@import 'mediawiki.skin.variables.less';
@import 'mediawiki.mixins.less';

#pt-themes {
    margin-right: 0;
    position: relative;
    font-size: 0.95em;
    line-height: 1.1em;
    display: flex;
    align-items: center;
    border: 1px solid transparent;

    > input[type="checkbox"] {
        display: none;
    }

    > label {
        position: relative;
        display: flex;
        flex-direction: column;
        color: @color-base;
        padding: 0.1em 0.3em;
        padding-right: 1.2em;
        cursor: pointer;

        > span:first-child {
            font-size: 80%;
            margin-right: 1.4em;
            color: @color-subtle;
        }

        > span:last-child {
            text-overflow: ellipsis;
            overflow-x: hidden;
            width: 12em;
            white-space: pre;
        }

        &::after {
            content: '';
            position: absolute;
            top: 0.8em;
            right: 0.2em;
            display: block;
            .cdx-mixin-css-icon( @cdx-icon-expand, @param-size-icon: @size-icon-small );
        }
    }

    &:hover,
    &:has( > input[ type="checkbox" ]:checked ) {
        border-radius: @border-radius-base;
        border-color: @border-color-base;

        .ext-themetoggle-popup {
            display: block;
        }

        > label > span:last-child::after {
            transform: rotate( 180deg );
        }
    }
}

#pt-themes .ext-themetoggle-popup {
    display: none;
    position: absolute;
    top: ~"calc( 100% - 2px )";
    left: -1px;
    right: -1px;
    padding: 0.2em;
    font-size: 102%;
    box-sizing: border-box;
    border: 1px solid @border-color-base;
    border-radius: @border-radius-base;
    border-top: 0;
    background: @background-color-base;
    color: @color-subtle;

    @media screen and (max-width: 720px) {
        font-size: inherit;
    }

    > ul {
        display: flex;
        flex-direction: column;
        list-style: none;
        margin: 0;
        padding: 0;
        align-items: flex-start;
        gap: 0.25em;
    }

    li:not( .mw-list-item ) {
        color: @color-subtle;
        padding: 0.4em 0.25em 0;
        font-size: 90%;
    }

    .mw-list-item {
        width: 100%;
        border-radius: 4px;
            
        &.section-divisor {
            color: @color-subtle;
            font-size: .7125em;
            text-transform: uppercase;
            padding: 0.3em 0.4em 0em 0.3em;
            line-height: 1;
        }

        &:not(.section-divisor):hover {
            background: #fff3;
        }

        a {
            display: block;
            padding: 0.3em 0.4em 0.25em 0.3em;
            text-decoration: none;
        }
    }
}

